Refactor a little bit in order to better handle the button states as suggested by Axel. Should resolve #7073.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40193 a95241bf-73f2-0310-859d-f6bbb57e9c96